@@ -1,6 +1,6 @@
 // istream classes -*- C++ -*-
 
-// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005
+// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -131,6 +131,46 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
 	  }
 	return *this;
       }
+
+  template<typename _CharT, typename _Traits>
+    basic_istream<_CharT, _Traits>&
+    basic_istream<_CharT, _Traits>::
+    operator>>(short& __n)
+    {
+      // _GLIBCXX_RESOLVE_LIB_DEFECTS
+      // 118. basic_istream uses nonexistent num_get member functions.
+      long __l;
+      _M_extract(__l);
+      if (!this->fail())
+	{
+	  if (numeric_limits<short>::min() <= __l
+	      && __l <= numeric_limits<short>::max())
+	    __n = __l;
+	  else
+	    this->setstate(ios_base::failbit);
+	}
+      return *this;
+    }
+    
+  template<typename _CharT, typename _Traits>
+    basic_istream<_CharT, _Traits>&
+    basic_istream<_CharT, _Traits>::
+    operator>>(int& __n)
+    {
+      // _GLIBCXX_RESOLVE_LIB_DEFECTS
+      // 118. basic_istream uses nonexistent num_get member functions.
+      long __l;
+      _M_extract(__l);
+      if (!this->fail())
+	{
+	  if (numeric_limits<int>::min() <= __l
+	      && __l <= numeric_limits<int>::max())
+	    __n = __l;
+	  else
+	    this->setstate(ios_base::failbit);
+	}
+      return *this;
+    }
 
   template<typename _CharT, typename _Traits>
     basic_istream<_CharT, _Traits>&
