@@ -1,6 +1,6 @@
 // Output streams -*- C++ -*-
 
-// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2005
+// Copyright (C) 1997, 1998, 1999, 2000, 2001, 2002, 2003, 2005, 2006
 // Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
@@ -176,16 +176,7 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
       { return _M_insert(__n); }
 
       __ostream_type& 
-      operator<<(short __n)
-      {
-	// _GLIBCXX_RESOLVE_LIB_DEFECTS
-	// 117. basic_ostream uses nonexistent num_put member functions.
-	const ios_base::fmtflags __fmt = this->flags() & ios_base::basefield;
-	if (__fmt == ios_base::oct || __fmt == ios_base::hex)
-	  return _M_insert(static_cast<long>(static_cast<unsigned short>(__n)));
-	else
-	  return _M_insert(static_cast<long>(__n));
-      }
+      operator<<(short __n);
 
       __ostream_type& 
       operator<<(unsigned short __n)
@@ -196,16 +187,7 @@ _GLIBCXX_BEGIN_NAMESPACE(std)
       }
 
       __ostream_type& 
-      operator<<(int __n)
-      {
-	// _GLIBCXX_RESOLVE_LIB_DEFECTS
-	// 117. basic_ostream uses nonexistent num_put member functions.
-	const ios_base::fmtflags __fmt = this->flags() & ios_base::basefield;
-	if (__fmt == ios_base::oct || __fmt == ios_base::hex)
-	  return _M_insert(static_cast<long>(static_cast<unsigned int>(__n)));
-	else
-	  return _M_insert(static_cast<long>(__n));
-      }
+      operator<<(int __n);
 
       __ostream_type& 
       operator<<(unsigned int __n)
